// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag demo -- group 1`] = `
.c20 {
  vertical-align: baseline;
}

.c22 {
  box-sizing: border-box;
  height: 20px;
  padding-left: 8px;
  display: inline-block;
  border-radius: 2px;
  color: #526075;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.c22::after {
  background: #d2d6ea;
}

.c22 .c27 {
  margin-right: 4px;
  vertical-align: middle;
  line-height: 18px;
}

.c22 .c23 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c22 .c26 {
  display: inline-block;
  width: 18px;
  height: 18px;
  line-height: 18px;
  font-size: 0;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  color: #526075;
}

.c22 .c26 .c25 {
  fill: #526075;
}

.c22 .c26:hover {
  background: #526075;
}

.c22 .c26:hover .c25 {
  fill: #ffffff;
}

.c19 {
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  line-height: 18px;
  text-align: center;
  display: inline-block;
  border-radius: 2px;
  position: relative;
  color: #526075;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.c19::after {
  background: #d2d6ea;
  position: absolute;
  right: 0;
}

.c17 {
  margin-bottom: -4px;
}

.c17 .c21,
.c17 .c18 {
  margin-right: 4px;
  margin-bottom: 4px;
  vertical-align: middle;
}

.c24 .c21,
.c24 .c18 {
  border-left-style: none;
  border-right-style: none;
  border-radius: unset;
  vertical-align: middle;
  margin-bottom: 4px;
}

.c24 .c21:first-child,
.c24 .c18:first-child {
  border-left-style: solid;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.c24 .c21:last-child,
.c24 .c18:last-child {
  border-right-style: solid;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.c24 .c21:last-child::after,
.c24 .c18:last-child::after {
  content: none;
}

.c24 .c21::after,
.c24 .c18::after {
  content: ' ';
  height: 8px;
  width: 1px;
  margin: 5px 0;
  display: inline-block;
  vertical-align: middle;
}

.c24 .c21 {
  padding-left: 4px;
}

.c24 .c21:first-child {
  padding-left: 8px;
}

.c24 .c21 .c23 {
  margin-right: 4px;
}

.c24 .c21:last-child .c23 {
  margin-right: 8px;
}

.c9 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c11 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c14 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c16 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c7 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c7:hover {
  border-color: #3357df;
}

.c7:hover .c13 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c7 .c13 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c7 .c15 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c7 .c8 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c7 .c10,
.c7 .c12 {
  line-height: 16px;
}

.c7 .c10 {
  padding-right: 20px;
}

.c7 .c12 {
  padding-left: 20px;
}

.c7 .c10 {
  display: none;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        compact
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c17"
    >
      <span
        class="c18 c19"
      >
        <i
          class="uc-fe-icon icon__circle c20"
        />
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c21 c22"
      >
        <span
          class="c23 "
        >
          Tag Content
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag demo -- group-compact 1`] = `
.c3 {
  vertical-align: baseline;
}

.c5 {
  box-sizing: border-box;
  height: 20px;
  padding-left: 8px;
  display: inline-block;
  border-radius: 2px;
  color: #526075;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.c5::after {
  background: #d2d6ea;
}

.c5 .c10 {
  margin-right: 4px;
  vertical-align: middle;
  line-height: 18px;
}

.c5 .c6 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c5 .c9 {
  display: inline-block;
  width: 18px;
  height: 18px;
  line-height: 18px;
  font-size: 0;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  color: #526075;
}

.c5 .c9 .c8 {
  fill: #526075;
}

.c5 .c9:hover {
  background: #526075;
}

.c5 .c9:hover .c8 {
  fill: #ffffff;
}

.c2 {
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  line-height: 18px;
  text-align: center;
  display: inline-block;
  border-radius: 2px;
  position: relative;
  color: #526075;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.c2::after {
  background: #d2d6ea;
  position: absolute;
  right: 0;
}

.c0 {
  margin-bottom: -4px;
}

.c0 .c4,
.c0 .c1 {
  margin-right: 4px;
  margin-bottom: 4px;
  vertical-align: middle;
}

.c7 {
  margin-bottom: -4px;
}

.c7 .c4,
.c7 .c1 {
  border-left-style: none;
  border-right-style: none;
  border-radius: unset;
  vertical-align: middle;
  margin-bottom: 4px;
}

.c7 .c4:first-child,
.c7 .c1:first-child {
  border-left-style: solid;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.c7 .c4:last-child,
.c7 .c1:last-child {
  border-right-style: solid;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.c7 .c4:last-child::after,
.c7 .c1:last-child::after {
  content: none;
}

.c7 .c4::after,
.c7 .c1::after {
  content: ' ';
  height: 8px;
  width: 1px;
  margin: 5px 0;
  display: inline-block;
  vertical-align: middle;
}

.c7 .c4 {
  padding-left: 4px;
}

.c7 .c4:first-child {
  padding-left: 8px;
}

.c7 .c4 .c6 {
  margin-right: 4px;
}

.c7 .c4:last-child .c6 {
  margin-right: 8px;
}

<div>
  <h3>
    默认状态
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        <i
          class="uc-fe-icon icon__circle c3"
        />
      </span>
      <span
        class="c4 c5"
      >
        <span
          class="c6 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c4 c5"
      >
        <span
          class="c6 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c4 c5"
      >
        <span
          class="c6 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c4 c5"
      >
        <span
          class="c6 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c4 c5"
      >
        <span
          class="c6 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c4 c5"
      >
        <span
          class="c6 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c4 c5"
      >
        <span
          class="c6 "
        >
          Tag Content
        </span>
      </span>
    </div>
  </div>
  <h3>
    紧凑状态
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="c7"
    >
      <span
        class="c1 c2"
      >
        <i
          class="uc-fe-icon icon__circle c3"
        />
      </span>
      <span
        class="c4 c5"
      >
        <span
          class="c6 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c4 c5"
      >
        <span
          class="c6 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c4 c5"
      >
        <span
          class="c6 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c4 c5"
      >
        <span
          class="c6 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c4 c5"
      >
        <span
          class="c6 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c4 c5"
      >
        <span
          class="c6 "
        >
          Tag Content
        </span>
      </span>
      <span
        class="c4 c5"
      >
        <span
          class="c6 "
        >
          Tag Content
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag demo -- icon 1`] = `
.c12 {
  vertical-align: baseline;
}

.c15 {
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  line-height: 18px;
  text-align: center;
  display: inline-block;
  border-radius: 2px;
  position: relative;
  color: #526075;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.c15::after {
  background: #d2d6ea;
  position: absolute;
  right: 0;
}

.c16 .c18,
.c16 .c14 {
  margin-right: 4px;
  margin-bottom: 4px;
  vertical-align: middle;
}

.c17 .c18,
.c17 .c14 {
  border-left-style: none;
  border-right-style: none;
  border-radius: unset;
  vertical-align: middle;
  margin-bottom: 4px;
}

.c17 .c18:first-child,
.c17 .c14:first-child {
  border-left-style: solid;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.c17 .c18:last-child,
.c17 .c14:last-child {
  border-right-style: solid;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.c17 .c18:last-child::after,
.c17 .c14:last-child::after {
  content: none;
}

.c17 .c18::after,
.c17 .c14::after {
  content: ' ';
  height: 8px;
  width: 1px;
  margin: 5px 0;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #0a1633;
}

.c9 .c10 {
  color: #c3cad9;
}

.c9 .c10 {
  color: #3860f4;
}

.c13 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 .c10 {
  color: #c3cad9;
}

.c13:hover {
  color: #0a1633;
}

.c13:hover .c10 {
  color: #3357df;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .sc-bxivhb {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .sc-bxivhb:last-child {
  margin-right: 0;
}

.c7 .c20 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c20:last-child {
  margin-right: 0;
}

.c7 .c21+.c21 {
  margin-left: -1px;
}

.c7 .c19 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c19:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c19:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        styleTyle
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox-ed c10 c11 c12"
            />
            default
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            green
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            yellow
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            red
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            primary
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            purple
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            lightblue
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            blue
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            orange
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            cyan
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            success
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            warning
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            error
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        icon
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            circle-fill
          </div>
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox-ed c10 c11 c12"
            />
            circle
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            loading
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            custom
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      class="c14 c15"
    >
      <i
        class="uc-fe-icon icon__circle c12"
      />
    </span>
  </div>
</div>
`;

exports[`Tag demo -- icon-icon 1`] = `
.c2 {
  vertical-align: baseline;
}

.c3 {
  vertical-align: baseline;
}

.c3.c3.c3 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

.c1 {
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  line-height: 18px;
  text-align: center;
  display: inline-block;
  border-radius: 2px;
  position: relative;
  color: #526075;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.c1::after {
  background: #d2d6ea;
  position: absolute;
  right: 0;
}

.c4 .c6,
.c4 .c0 {
  margin-right: 4px;
  margin-bottom: 4px;
  vertical-align: middle;
}

.c5 .c6,
.c5 .c0 {
  border-left-style: none;
  border-right-style: none;
  border-radius: unset;
  vertical-align: middle;
  margin-bottom: 4px;
}

.c5 .c6:first-child,
.c5 .c0:first-child {
  border-left-style: solid;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.c5 .c6:last-child,
.c5 .c0:last-child {
  border-right-style: solid;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.c5 .c6:last-child::after,
.c5 .c0:last-child::after {
  content: none;
}

.c5 .c6::after,
.c5 .c0::after {
  content: ' ';
  height: 8px;
  width: 1px;
  margin: 5px 0;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div>
      <span
        class="c0 c1"
      >
        <i
          class="uc-fe-icon icon__circle c2"
        />
      </span>
    </div>
    <div>
      <span
        class="c0 c1"
      >
        <i
          class="uc-fe-icon icon__circle-fill c2"
        />
      </span>
    </div>
    <div>
      <span
        class="c0 c1"
      >
        <i
          class="uc-fe-icon icon__loading c2"
        />
      </span>
    </div>
    <div>
      <span
        class="c0 c1"
      >
        <i
          class="uc-fe-icon icon__loading uc-fe-icon-spin c3"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag demo -- icon-styleType 1`] = `
.c2 {
  vertical-align: baseline;
}

.c1 {
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  line-height: 18px;
  text-align: center;
  display: inline-block;
  border-radius: 2px;
  position: relative;
  color: #526075;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.c1::after {
  background: #d2d6ea;
  position: absolute;
  right: 0;
}

.c3 {
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  line-height: 18px;
  text-align: center;
  display: inline-block;
  border-radius: 2px;
  position: relative;
  color: #4cd964;
  border: 1px solid #9effa5;
  background: #edfff2;
}

.c3::after {
  background: #9effa5;
  position: absolute;
  right: 0;
}

.c4 {
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  line-height: 18px;
  text-align: center;
  display: inline-block;
  border-radius: 2px;
  position: relative;
  color: #f9ce1d;
  border: 1px solid #fff28f;
  background: #fffce5;
}

.c4::after {
  background: #fff28f;
  position: absolute;
  right: 0;
}

.c5 {
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  line-height: 18px;
  text-align: center;
  display: inline-block;
  border-radius: 2px;
  position: relative;
  color: #f44336;
  border: 1px solid #fed4d4;
  background: #fff0f0;
}

.c5::after {
  background: #fed4d4;
  position: absolute;
  right: 0;
}

.c6 {
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  line-height: 18px;
  text-align: center;
  display: inline-block;
  border-radius: 2px;
  position: relative;
  color: #ffffff;
  border: 1px solid #3860f4;
  background: #3860f4;
}

.c6::after {
  background: #3860f4;
  position: absolute;
  right: 0;
}

.c7 {
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  line-height: 18px;
  text-align: center;
  display: inline-block;
  border-radius: 2px;
  position: relative;
  color: #ac71ef;
  border: 1px solid #dec6f9;
  background: #f7f1fd;
}

.c7::after {
  background: #dec6f9;
  position: absolute;
  right: 0;
}

.c8 {
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  line-height: 18px;
  text-align: center;
  display: inline-block;
  border-radius: 2px;
  position: relative;
  color: #2eceff;
  border: 1px solid #abebff;
  background: #eafaff;
}

.c8::after {
  background: #abebff;
  position: absolute;
  right: 0;
}

.c9 {
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  line-height: 18px;
  text-align: center;
  display: inline-block;
  border-radius: 2px;
  position: relative;
  color: #499ff5;
  border: 1px solid #b6d9fb;
  background: #edf5fe;
}

.c9::after {
  background: #b6d9fb;
  position: absolute;
  right: 0;
}

.c10 {
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  line-height: 18px;
  text-align: center;
  display: inline-block;
  border-radius: 2px;
  position: relative;
  color: #fc946a;
  border: 1px solid #fed4c3;
  background: #fff4f0;
}

.c10::after {
  background: #fed4c3;
  position: absolute;
  right: 0;
}

.c11 {
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  line-height: 18px;
  text-align: center;
  display: inline-block;
  border-radius: 2px;
  position: relative;
  color: #0af5ce;
  border: 1px solid #9dfbeb;
  background: #e7fefa;
}

.c11::after {
  background: #9dfbeb;
  position: absolute;
  right: 0;
}

.c12 .c14,
.c12 .c0 {
  margin-right: 4px;
  margin-bottom: 4px;
  vertical-align: middle;
}

.c13 .c14,
.c13 .c0 {
  border-left-style: none;
  border-right-style: none;
  border-radius: unset;
  vertical-align: middle;
  margin-bottom: 4px;
}

.c13 .c14:first-child,
.c13 .c0:first-child {
  border-left-style: solid;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.c13 .c14:last-child,
.c13 .c0:last-child {
  border-right-style: solid;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.c13 .c14:last-child::after,
.c13 .c0:last-child::after {
  content: none;
}

.c13 .c14::after,
.c13 .c0::after {
  content: ' ';
  height: 8px;
  width: 1px;
  margin: 5px 0;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <h3>
    状态
  </h3>
  <div
    class="demo-wrap"
  >
    <div>
      <span
        class="c0 c1"
      >
        <i
          class="uc-fe-icon icon__circle-fill c2"
        />
      </span>
    </div>
    <div>
      <span
        class="c0 c3"
      >
        <i
          class="uc-fe-icon icon__circle-fill c2"
        />
      </span>
    </div>
    <div>
      <span
        class="c0 c4"
      >
        <i
          class="uc-fe-icon icon__circle-fill c2"
        />
      </span>
    </div>
    <div>
      <span
        class="c0 c5"
      >
        <i
          class="uc-fe-icon icon__circle-fill c2"
        />
      </span>
    </div>
  </div>
  <h3>
    预设颜色
  </h3>
  <div
    class="demo-wrap"
  >
    <div>
      <span
        class="c0 c1"
      >
        <i
          class="uc-fe-icon icon__circle-fill c2"
        />
      </span>
    </div>
    <div>
      <span
        class="c0 c3"
      >
        <i
          class="uc-fe-icon icon__circle-fill c2"
        />
      </span>
    </div>
    <div>
      <span
        class="c0 c4"
      >
        <i
          class="uc-fe-icon icon__circle-fill c2"
        />
      </span>
    </div>
    <div>
      <span
        class="c0 c5"
      >
        <i
          class="uc-fe-icon icon__circle-fill c2"
        />
      </span>
    </div>
    <div>
      <span
        class="c0 c6"
      >
        <i
          class="uc-fe-icon icon__circle-fill c2"
        />
      </span>
    </div>
    <div>
      <span
        class="c0 c7"
      >
        <i
          class="uc-fe-icon icon__circle-fill c2"
        />
      </span>
    </div>
    <div>
      <span
        class="c0 c8"
      >
        <i
          class="uc-fe-icon icon__circle-fill c2"
        />
      </span>
    </div>
    <div>
      <span
        class="c0 c9"
      >
        <i
          class="uc-fe-icon icon__circle-fill c2"
        />
      </span>
    </div>
    <div>
      <span
        class="c0 c10"
      >
        <i
          class="uc-fe-icon icon__circle-fill c2"
        />
      </span>
    </div>
    <div>
      <span
        class="c0 c11"
      >
        <i
          class="uc-fe-icon icon__circle-fill c2"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag demo -- tag 1`] = `
.c12 {
  vertical-align: baseline;
}

.c25 {
  box-sizing: border-box;
  height: 20px;
  padding-left: 8px;
  display: inline-block;
  border-radius: 2px;
  color: #526075;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.c25::after {
  background: #d2d6ea;
}

.c25 .c41 {
  margin-right: 4px;
  vertical-align: middle;
  line-height: 18px;
}

.c25 .c26 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c25 .c40 {
  display: inline-block;
  width: 18px;
  height: 18px;
  line-height: 18px;
  font-size: 0;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  color: #526075;
}

.c25 .c40 .c39 {
  fill: #526075;
}

.c25 .c40:hover {
  background: #526075;
}

.c25 .c40:hover .c39 {
  fill: #ffffff;
}

.c27 .c26 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c28 .c26 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c29 .c26 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c30 .c26 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c31 .c26 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c32 .c26 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c33 .c26 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c34 .c26 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c35 .c26 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c36 .c26 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c37 .c24,
.c37 .style__IconTagWrapper-sc-16gjvsq-7 {
  margin-right: 4px;
  margin-bottom: 4px;
  vertical-align: middle;
}

.c38 .c24,
.c38 .style__IconTagWrapper-sc-16gjvsq-7 {
  border-left-style: none;
  border-right-style: none;
  border-radius: unset;
  vertical-align: middle;
  margin-bottom: 4px;
}

.c38 .c24:first-child,
.c38 .style__IconTagWrapper-sc-16gjvsq-7:first-child {
  border-left-style: solid;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.c38 .c24:last-child,
.c38 .style__IconTagWrapper-sc-16gjvsq-7:last-child {
  border-right-style: solid;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.c38 .c24:last-child::after,
.c38 .style__IconTagWrapper-sc-16gjvsq-7:last-child::after {
  content: none;
}

.c38 .c24::after,
.c38 .style__IconTagWrapper-sc-16gjvsq-7::after {
  content: ' ';
  height: 8px;
  width: 1px;
  margin: 5px 0;
  display: inline-block;
  vertical-align: middle;
}

.c38 .c24 {
  padding-left: 4px;
}

.c38 .c24:first-child {
  padding-left: 8px;
}

.c38 .c24 .c26 {
  margin-right: 4px;
}

.c38 .c24:last-child .c26 {
  margin-right: 8px;
}

.c16 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c14 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c14:hover {
  border-color: #3357df;
}

.c14:hover .c20 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c14 .c20 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c14 .c22 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c14 .c15 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c14 .c17,
.c14 .c19 {
  line-height: 16px;
}

.c14 .c17 {
  padding-right: 20px;
}

.c14 .c19 {
  padding-left: 20px;
}

.c14 .c17 {
  display: none;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #0a1633;
}

.c9 .c10 {
  color: #c3cad9;
}

.c9 .c10 {
  color: #3860f4;
}

.c13 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 .c10 {
  color: #c3cad9;
}

.c13:hover {
  color: #0a1633;
}

.c13:hover .c10 {
  color: #3357df;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .sc-bxivhb {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .sc-bxivhb:last-child {
  margin-right: 0;
}

.c7 .c43 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c43:last-child {
  margin-right: 0;
}

.c7 .c44+.c44 {
  margin-left: -1px;
}

.c7 .c42 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c42:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c42:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        styleTyle
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox-ed c10 c11 c12"
            />
            default
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            green
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            yellow
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            red
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            primary
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            purple
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            lightblue
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            blue
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            orange
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            cyan
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            success
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            warning
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            error
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        closable
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        icon
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            circle-fill
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            circle
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            loading
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            custom
          </div>
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox-ed c10 c11 c12"
            />
            null
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      class="c24 c25"
    >
      <span
        class="c26 "
      >
        Tag Content
      </span>
    </span>
  </div>
</div>
`;

exports[`Tag demo -- tag-closable 1`] = `
.c7 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.c3 {
  vertical-align: baseline;
}

.c1 {
  box-sizing: border-box;
  height: 20px;
  padding-left: 8px;
  display: inline-block;
  border-radius: 2px;
  color: #526075;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.c1::after {
  background: #d2d6ea;
}

.c1 .c2 {
  margin-right: 4px;
  vertical-align: middle;
  line-height: 18px;
}

.c1 .c4 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c1 .c5 {
  display: inline-block;
  width: 18px;
  height: 18px;
  line-height: 18px;
  font-size: 0;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  color: #526075;
}

.c1 .c5 .c6 {
  fill: #526075;
}

.c1 .c5:hover {
  background: #526075;
}

.c1 .c5:hover .c6 {
  fill: #ffffff;
}

.c8 .c0,
.c8 .style__IconTagWrapper-sc-16gjvsq-7 {
  margin-right: 4px;
  margin-bottom: 4px;
  vertical-align: middle;
}

.c9 .c0,
.c9 .style__IconTagWrapper-sc-16gjvsq-7 {
  border-left-style: none;
  border-right-style: none;
  border-radius: unset;
  vertical-align: middle;
  margin-bottom: 4px;
}

.c9 .c0:first-child,
.c9 .style__IconTagWrapper-sc-16gjvsq-7:first-child {
  border-left-style: solid;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.c9 .c0:last-child,
.c9 .style__IconTagWrapper-sc-16gjvsq-7:last-child {
  border-right-style: solid;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.c9 .c0:last-child::after,
.c9 .style__IconTagWrapper-sc-16gjvsq-7:last-child::after {
  content: none;
}

.c9 .c0::after,
.c9 .style__IconTagWrapper-sc-16gjvsq-7::after {
  content: ' ';
  height: 8px;
  width: 1px;
  margin: 5px 0;
  display: inline-block;
  vertical-align: middle;
}

.c9 .c0 {
  padding-left: 4px;
}

.c9 .c0:first-child {
  padding-left: 8px;
}

.c9 .c0 .c4 {
  margin-right: 4px;
}

.c9 .c0:last-child .c4 {
  margin-right: 8px;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0 c1"
    >
      <span
        class="c2 "
      >
        <i
          class="uc-fe-icon icon__circle-fill c3"
        />
      </span>
      <span
        class="c4 "
      >
        Content
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0 c1"
    >
      <span
        class="c2 "
      >
        <i
          class="uc-fe-icon icon__circle-fill c3"
        />
      </span>
      <span
        class="c4 "
      >
        Content
      </span>
      <span
        class="c5 "
      >
        <svg
          class="c6 c7"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`Tag demo -- tag-disabled 1`] = `
.c7 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.c3 {
  vertical-align: baseline;
}

.c1 {
  box-sizing: border-box;
  height: 20px;
  padding-left: 8px;
  display: inline-block;
  border-radius: 2px;
  color: #526075;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.c1::after {
  background: #d2d6ea;
}

.c1 .c2 {
  margin-right: 4px;
  vertical-align: middle;
  line-height: 18px;
}

.c1 .c4 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c1 .c5 {
  display: inline-block;
  width: 18px;
  height: 18px;
  line-height: 18px;
  font-size: 0;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  color: #526075;
}

.c1 .c5 .c6 {
  fill: #526075;
}

.c1 .c5:hover {
  background: #526075;
}

.c1 .c5:hover .c6 {
  fill: #ffffff;
}

.c8 {
  box-sizing: border-box;
  height: 20px;
  padding-left: 8px;
  display: inline-block;
  border-radius: 2px;
  color: #cccccc;
  border: 1px solid #d9d9d9;
  background: #f7f7f7;
}

.c8::after {
  background: #d9d9d9;
}

.c8 .c2 {
  margin-right: 4px;
  vertical-align: middle;
  line-height: 18px;
}

.c8 .c4 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c8 .c5 {
  display: inline-block;
  width: 18px;
  height: 18px;
  line-height: 18px;
  font-size: 0;
  vertical-align: middle;
  text-align: center;
  color: #cccccc;
}

.c8 .c5 .c6 {
  fill: #cccccc;
}

.c9 .c0,
.c9 .style__IconTagWrapper-sc-16gjvsq-7 {
  margin-right: 4px;
  margin-bottom: 4px;
  vertical-align: middle;
}

.c10 .c0,
.c10 .style__IconTagWrapper-sc-16gjvsq-7 {
  border-left-style: none;
  border-right-style: none;
  border-radius: unset;
  vertical-align: middle;
  margin-bottom: 4px;
}

.c10 .c0:first-child,
.c10 .style__IconTagWrapper-sc-16gjvsq-7:first-child {
  border-left-style: solid;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.c10 .c0:last-child,
.c10 .style__IconTagWrapper-sc-16gjvsq-7:last-child {
  border-right-style: solid;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.c10 .c0:last-child::after,
.c10 .style__IconTagWrapper-sc-16gjvsq-7:last-child::after {
  content: none;
}

.c10 .c0::after,
.c10 .style__IconTagWrapper-sc-16gjvsq-7::after {
  content: ' ';
  height: 8px;
  width: 1px;
  margin: 5px 0;
  display: inline-block;
  vertical-align: middle;
}

.c10 .c0 {
  padding-left: 4px;
}

.c10 .c0:first-child {
  padding-left: 8px;
}

.c10 .c0 .c4 {
  margin-right: 4px;
}

.c10 .c0:last-child .c4 {
  margin-right: 8px;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0 c1"
    >
      <span
        class="c2 "
      >
        <i
          class="uc-fe-icon icon__circle-fill c3"
        />
      </span>
      <span
        class="c4 "
      >
        Content
      </span>
      <span
        class="c5 "
      >
        <svg
          class="c6 c7"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0 c8"
      disabled=""
    >
      <span
        class="c2 "
      >
        <i
          class="uc-fe-icon icon__circle-fill c3"
        />
      </span>
      <span
        class="c4 "
      >
        Content
      </span>
      <span
        class="c5 "
      >
        <svg
          class="c6 c7"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`Tag demo -- tag-icon 1`] = `
.c7 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.c3 {
  vertical-align: baseline;
}

.c8 {
  vertical-align: baseline;
}

.c8.c8.c8 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

.c1 {
  box-sizing: border-box;
  height: 20px;
  padding-left: 8px;
  display: inline-block;
  border-radius: 2px;
  color: #526075;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.c1::after {
  background: #d2d6ea;
}

.c1 .c2 {
  margin-right: 4px;
  vertical-align: middle;
  line-height: 18px;
}

.c1 .c4 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c1 .c5 {
  display: inline-block;
  width: 18px;
  height: 18px;
  line-height: 18px;
  font-size: 0;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  color: #526075;
}

.c1 .c5 .c6 {
  fill: #526075;
}

.c1 .c5:hover {
  background: #526075;
}

.c1 .c5:hover .c6 {
  fill: #ffffff;
}

.c9 .c2 {
  margin-right: 4px;
  vertical-align: middle;
  line-height: 18px;
}

.c9 .c4 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c9 .c5 {
  display: inline-block;
  width: 18px;
  height: 18px;
  line-height: 18px;
  font-size: 0;
  vertical-align: middle;
  text-align: center;
  color: #cccccc;
}

.c9 .c5 .c6 {
  fill: #cccccc;
}

.c10 .c0,
.c10 .style__IconTagWrapper-sc-16gjvsq-7 {
  margin-right: 4px;
  margin-bottom: 4px;
  vertical-align: middle;
}

.c11 .c0,
.c11 .style__IconTagWrapper-sc-16gjvsq-7 {
  border-left-style: none;
  border-right-style: none;
  border-radius: unset;
  vertical-align: middle;
  margin-bottom: 4px;
}

.c11 .c0:first-child,
.c11 .style__IconTagWrapper-sc-16gjvsq-7:first-child {
  border-left-style: solid;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.c11 .c0:last-child,
.c11 .style__IconTagWrapper-sc-16gjvsq-7:last-child {
  border-right-style: solid;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.c11 .c0:last-child::after,
.c11 .style__IconTagWrapper-sc-16gjvsq-7:last-child::after {
  content: none;
}

.c11 .c0::after,
.c11 .style__IconTagWrapper-sc-16gjvsq-7::after {
  content: ' ';
  height: 8px;
  width: 1px;
  margin: 5px 0;
  display: inline-block;
  vertical-align: middle;
}

.c11 .c0 {
  padding-left: 4px;
}

.c11 .c0:first-child {
  padding-left: 8px;
}

.c11 .c0 .c4 {
  margin-right: 4px;
}

.c11 .c0:last-child .c4 {
  margin-right: 8px;
}

<div>
  <div
    class="demo-wrap"
  >
    <div>
      <span
        class="c0 c1"
      >
        <span
          class="c2 "
        >
          <i
            class="uc-fe-icon icon__circle c3"
          />
        </span>
        <span
          class="c4 "
        >
          Content
        </span>
        <span
          class="c5 "
        >
          <svg
            class="c6 c7"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div>
      <span
        class="c0 c1"
      >
        <span
          class="c2 "
        >
          <i
            class="uc-fe-icon icon__circle-fill c3"
          />
        </span>
        <span
          class="c4 "
        >
          Content
        </span>
        <span
          class="c5 "
        >
          <svg
            class="c6 c7"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div>
      <span
        class="c0 c1"
      >
        <span
          class="c2 "
        >
          <i
            class="uc-fe-icon icon__loading c3"
          />
        </span>
        <span
          class="c4 "
        >
          Content
        </span>
        <span
          class="c5 "
        >
          <svg
            class="c6 c7"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div>
      <span
        class="c0 c1"
      >
        <span
          class="c2 "
        >
          <i
            class="uc-fe-icon icon__loading uc-fe-icon-spin c8"
          />
        </span>
        <span
          class="c4 "
        >
          Content
        </span>
        <span
          class="c5 "
        >
          <svg
            class="c6 c7"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag demo -- tag-styleType 1`] = `
.c7 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.c3 {
  vertical-align: baseline;
}

.c1 {
  box-sizing: border-box;
  height: 20px;
  padding-left: 8px;
  display: inline-block;
  border-radius: 2px;
  color: #526075;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.c1::after {
  background: #d2d6ea;
}

.c1 .c2 {
  margin-right: 4px;
  vertical-align: middle;
  line-height: 18px;
}

.c1 .c4 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c1 .c5 {
  display: inline-block;
  width: 18px;
  height: 18px;
  line-height: 18px;
  font-size: 0;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  color: #526075;
}

.c1 .c5 .c6 {
  fill: #526075;
}

.c1 .c5:hover {
  background: #526075;
}

.c1 .c5:hover .c6 {
  fill: #ffffff;
}

.c17 .c2 {
  margin-right: 4px;
  vertical-align: middle;
  line-height: 18px;
}

.c17 .c4 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c17 .c5 {
  display: inline-block;
  width: 18px;
  height: 18px;
  line-height: 18px;
  font-size: 0;
  vertical-align: middle;
  text-align: center;
  color: #cccccc;
}

.c17 .c5 .c6 {
  fill: #cccccc;
}

.c8 {
  box-sizing: border-box;
  height: 20px;
  padding-left: 8px;
  display: inline-block;
  border-radius: 2px;
  color: #4cd964;
  border: 1px solid #9effa5;
  background: #edfff2;
}

.c8::after {
  background: #9effa5;
}

.c8 .c2 {
  margin-right: 4px;
  vertical-align: middle;
  line-height: 18px;
}

.c8 .c4 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c8 .c5 {
  display: inline-block;
  width: 18px;
  height: 18px;
  line-height: 18px;
  font-size: 0;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  color: #4cd964;
}

.c8 .c5 .c6 {
  fill: #4cd964;
}

.c8 .c5:hover {
  background: #4cd964;
}

.c8 .c5:hover .c6 {
  fill: #ffffff;
}

.c9 {
  box-sizing: border-box;
  height: 20px;
  padding-left: 8px;
  display: inline-block;
  border-radius: 2px;
  color: #f9ce1d;
  border: 1px solid #fff28f;
  background: #fffce5;
}

.c9::after {
  background: #fff28f;
}

.c9 .c2 {
  margin-right: 4px;
  vertical-align: middle;
  line-height: 18px;
}

.c9 .c4 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c9 .c5 {
  display: inline-block;
  width: 18px;
  height: 18px;
  line-height: 18px;
  font-size: 0;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  color: #f9ce1d;
}

.c9 .c5 .c6 {
  fill: #f9ce1d;
}

.c9 .c5:hover {
  background: #f9ce1d;
}

.c9 .c5:hover .c6 {
  fill: #ffffff;
}

.c10 {
  box-sizing: border-box;
  height: 20px;
  padding-left: 8px;
  display: inline-block;
  border-radius: 2px;
  color: #f44336;
  border: 1px solid #fed4d4;
  background: #fff0f0;
}

.c10::after {
  background: #fed4d4;
}

.c10 .c2 {
  margin-right: 4px;
  vertical-align: middle;
  line-height: 18px;
}

.c10 .c4 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c10 .c5 {
  display: inline-block;
  width: 18px;
  height: 18px;
  line-height: 18px;
  font-size: 0;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  color: #f44336;
}

.c10 .c5 .c6 {
  fill: #f44336;
}

.c10 .c5:hover {
  background: #f44336;
}

.c10 .c5:hover .c6 {
  fill: #ffffff;
}

.c11 {
  box-sizing: border-box;
  height: 20px;
  padding-left: 8px;
  display: inline-block;
  border-radius: 2px;
  color: #ffffff;
  border: 1px solid #3860f4;
  background: #3860f4;
}

.c11::after {
  background: #3860f4;
}

.c11 .c2 {
  margin-right: 4px;
  vertical-align: middle;
  line-height: 18px;
}

.c11 .c4 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c11 .c5 {
  display: inline-block;
  width: 18px;
  height: 18px;
  line-height: 18px;
  font-size: 0;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  color: #ffffff;
}

.c11 .c5 .c6 {
  fill: #ffffff;
}

.c11 .c5:hover {
  background: #3357df;
}

.c11 .c5:hover .c6 {
  fill: #ffffff;
}

.c12 {
  box-sizing: border-box;
  height: 20px;
  padding-left: 8px;
  display: inline-block;
  border-radius: 2px;
  color: #ac71ef;
  border: 1px solid #dec6f9;
  background: #f7f1fd;
}

.c12::after {
  background: #dec6f9;
}

.c12 .c2 {
  margin-right: 4px;
  vertical-align: middle;
  line-height: 18px;
}

.c12 .c4 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c12 .c5 {
  display: inline-block;
  width: 18px;
  height: 18px;
  line-height: 18px;
  font-size: 0;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  color: #ac71ef;
}

.c12 .c5 .c6 {
  fill: #ac71ef;
}

.c12 .c5:hover {
  background: #ac71ef;
}

.c12 .c5:hover .c6 {
  fill: #ffffff;
}

.c13 {
  box-sizing: border-box;
  height: 20px;
  padding-left: 8px;
  display: inline-block;
  border-radius: 2px;
  color: #2eceff;
  border: 1px solid #abebff;
  background: #eafaff;
}

.c13::after {
  background: #abebff;
}

.c13 .c2 {
  margin-right: 4px;
  vertical-align: middle;
  line-height: 18px;
}

.c13 .c4 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c13 .c5 {
  display: inline-block;
  width: 18px;
  height: 18px;
  line-height: 18px;
  font-size: 0;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  color: #2eceff;
}

.c13 .c5 .c6 {
  fill: #2eceff;
}

.c13 .c5:hover {
  background: #2eceff;
}

.c13 .c5:hover .c6 {
  fill: #ffffff;
}

.c14 {
  box-sizing: border-box;
  height: 20px;
  padding-left: 8px;
  display: inline-block;
  border-radius: 2px;
  color: #499ff5;
  border: 1px solid #b6d9fb;
  background: #edf5fe;
}

.c14::after {
  background: #b6d9fb;
}

.c14 .c2 {
  margin-right: 4px;
  vertical-align: middle;
  line-height: 18px;
}

.c14 .c4 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c14 .c5 {
  display: inline-block;
  width: 18px;
  height: 18px;
  line-height: 18px;
  font-size: 0;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  color: #499ff5;
}

.c14 .c5 .c6 {
  fill: #499ff5;
}

.c14 .c5:hover {
  background: #499ff5;
}

.c14 .c5:hover .c6 {
  fill: #ffffff;
}

.c15 {
  box-sizing: border-box;
  height: 20px;
  padding-left: 8px;
  display: inline-block;
  border-radius: 2px;
  color: #fc946a;
  border: 1px solid #fed4c3;
  background: #fff4f0;
}

.c15::after {
  background: #fed4c3;
}

.c15 .c2 {
  margin-right: 4px;
  vertical-align: middle;
  line-height: 18px;
}

.c15 .c4 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c15 .c5 {
  display: inline-block;
  width: 18px;
  height: 18px;
  line-height: 18px;
  font-size: 0;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  color: #fc946a;
}

.c15 .c5 .c6 {
  fill: #fc946a;
}

.c15 .c5:hover {
  background: #fc946a;
}

.c15 .c5:hover .c6 {
  fill: #ffffff;
}

.c16 {
  box-sizing: border-box;
  height: 20px;
  padding-left: 8px;
  display: inline-block;
  border-radius: 2px;
  color: #0af5ce;
  border: 1px solid #9dfbeb;
  background: #e7fefa;
}

.c16::after {
  background: #9dfbeb;
}

.c16 .c2 {
  margin-right: 4px;
  vertical-align: middle;
  line-height: 18px;
}

.c16 .c4 {
  margin-right: 8px;
  vertical-align: middle;
  line-height: 18px;
}

.c16 .c5 {
  display: inline-block;
  width: 18px;
  height: 18px;
  line-height: 18px;
  font-size: 0;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  color: #0af5ce;
}

.c16 .c5 .c6 {
  fill: #0af5ce;
}

.c16 .c5:hover {
  background: #0af5ce;
}

.c16 .c5:hover .c6 {
  fill: #ffffff;
}

.c18 .c0,
.c18 .style__IconTagWrapper-sc-16gjvsq-7 {
  margin-right: 4px;
  margin-bottom: 4px;
  vertical-align: middle;
}

.c19 .c0,
.c19 .style__IconTagWrapper-sc-16gjvsq-7 {
  border-left-style: none;
  border-right-style: none;
  border-radius: unset;
  vertical-align: middle;
  margin-bottom: 4px;
}

.c19 .c0:first-child,
.c19 .style__IconTagWrapper-sc-16gjvsq-7:first-child {
  border-left-style: solid;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.c19 .c0:last-child,
.c19 .style__IconTagWrapper-sc-16gjvsq-7:last-child {
  border-right-style: solid;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.c19 .c0:last-child::after,
.c19 .style__IconTagWrapper-sc-16gjvsq-7:last-child::after {
  content: none;
}

.c19 .c0::after,
.c19 .style__IconTagWrapper-sc-16gjvsq-7::after {
  content: ' ';
  height: 8px;
  width: 1px;
  margin: 5px 0;
  display: inline-block;
  vertical-align: middle;
}

.c19 .c0 {
  padding-left: 4px;
}

.c19 .c0:first-child {
  padding-left: 8px;
}

.c19 .c0 .c4 {
  margin-right: 4px;
}

.c19 .c0:last-child .c4 {
  margin-right: 8px;
}

<div>
  <h3>
    状态
  </h3>
  <div
    class="demo-wrap"
  >
    <div>
      <span
        class="c0 c1"
      >
        <span
          class="c2 "
        >
          <i
            class="uc-fe-icon icon__circle-fill c3"
          />
        </span>
        <span
          class="c4 "
        >
          Content
        </span>
        <span
          class="c5 "
        >
          <svg
            class="c6 c7"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div>
      <span
        class="c0 c8"
      >
        <span
          class="c2 "
        >
          <i
            class="uc-fe-icon icon__circle-fill c3"
          />
        </span>
        <span
          class="c4 "
        >
          Content
        </span>
        <span
          class="c5 "
        >
          <svg
            class="c6 c7"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div>
      <span
        class="c0 c9"
      >
        <span
          class="c2 "
        >
          <i
            class="uc-fe-icon icon__circle-fill c3"
          />
        </span>
        <span
          class="c4 "
        >
          Content
        </span>
        <span
          class="c5 "
        >
          <svg
            class="c6 c7"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div>
      <span
        class="c0 c10"
      >
        <span
          class="c2 "
        >
          <i
            class="uc-fe-icon icon__circle-fill c3"
          />
        </span>
        <span
          class="c4 "
        >
          Content
        </span>
        <span
          class="c5 "
        >
          <svg
            class="c6 c7"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
  <h3>
    预设颜色
  </h3>
  <div
    class="demo-wrap"
  >
    <div>
      <span
        class="c0 c1"
      >
        <span
          class="c2 "
        >
          <i
            class="uc-fe-icon icon__circle-fill c3"
          />
        </span>
        <span
          class="c4 "
        >
          Content
        </span>
        <span
          class="c5 "
        >
          <svg
            class="c6 c7"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div>
      <span
        class="c0 c8"
      >
        <span
          class="c2 "
        >
          <i
            class="uc-fe-icon icon__circle-fill c3"
          />
        </span>
        <span
          class="c4 "
        >
          Content
        </span>
        <span
          class="c5 "
        >
          <svg
            class="c6 c7"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div>
      <span
        class="c0 c9"
      >
        <span
          class="c2 "
        >
          <i
            class="uc-fe-icon icon__circle-fill c3"
          />
        </span>
        <span
          class="c4 "
        >
          Content
        </span>
        <span
          class="c5 "
        >
          <svg
            class="c6 c7"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div>
      <span
        class="c0 c10"
      >
        <span
          class="c2 "
        >
          <i
            class="uc-fe-icon icon__circle-fill c3"
          />
        </span>
        <span
          class="c4 "
        >
          Content
        </span>
        <span
          class="c5 "
        >
          <svg
            class="c6 c7"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div>
      <span
        class="c0 c11"
      >
        <span
          class="c2 "
        >
          <i
            class="uc-fe-icon icon__circle-fill c3"
          />
        </span>
        <span
          class="c4 "
        >
          Content
        </span>
        <span
          class="c5 "
        >
          <svg
            class="c6 c7"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div>
      <span
        class="c0 c12"
      >
        <span
          class="c2 "
        >
          <i
            class="uc-fe-icon icon__circle-fill c3"
          />
        </span>
        <span
          class="c4 "
        >
          Content
        </span>
        <span
          class="c5 "
        >
          <svg
            class="c6 c7"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div>
      <span
        class="c0 c13"
      >
        <span
          class="c2 "
        >
          <i
            class="uc-fe-icon icon__circle-fill c3"
          />
        </span>
        <span
          class="c4 "
        >
          Content
        </span>
        <span
          class="c5 "
        >
          <svg
            class="c6 c7"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div>
      <span
        class="c0 c14"
      >
        <span
          class="c2 "
        >
          <i
            class="uc-fe-icon icon__circle-fill c3"
          />
        </span>
        <span
          class="c4 "
        >
          Content
        </span>
        <span
          class="c5 "
        >
          <svg
            class="c6 c7"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div>
      <span
        class="c0 c15"
      >
        <span
          class="c2 "
        >
          <i
            class="uc-fe-icon icon__circle-fill c3"
          />
        </span>
        <span
          class="c4 "
        >
          Content
        </span>
        <span
          class="c5 "
        >
          <svg
            class="c6 c7"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div>
      <span
        class="c0 c16"
      >
        <span
          class="c2 "
        >
          <i
            class="uc-fe-icon icon__circle-fill c3"
          />
        </span>
        <span
          class="c4 "
        >
          Content
        </span>
        <span
          class="c5 "
        >
          <svg
            class="c6 c7"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.07 4.93a1 1 0 010 1.41L13.41 12l5.66 5.66a1 1 0 11-1.41 1.41L12 13.41l-5.66 5.66a1 1 0 11-1.41-1.41L10.59 12 4.93 6.34a1 1 0 011.41-1.41L12 10.59l5.66-5.66a1 1 0 011.41 0z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;
